--- a/index.html
+++ b/index.html
@@ -2,12 +2,105 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
-    
+    <title>Tribute Page</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <h1>Fallingwater</h1>
+        <ul>
+          <li class=""><a href="#preservation">Preservation</a></li>
+          <li class=""><a href="#history">History</a></li>
+          <li class=""><a href="#footer">More Info</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <article id="preservation">
+        <img
+          src="https://images.unsplash.com/photo-1592889208276-10af586b7150?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1473&q=80"
+          alt="Fallingwater"
+          width="100%"
+        />
+        <h2>Preservation</h2>
 
+        <p>
+          Frank Lloyd Wright designed Fallingwater for the Kaufmann family as a
+          living structure - one so interposed with nature that the outside
+          literally becomes part of the inside. Edgar Kaufmann, jr. once wrote:
+          “In Fallingwater Wright captured the perfect essence of our desire to
+          live with nature, to dwell in a forested place and be at home in the
+          natural world.” However, the effects of time and weather on the
+          materials that meld the house to its landscape have caused major
+          building systems to reach the end of their useful lives. To address
+          these preservation needs and uphold our commitment to protect
+          Fallingwater as a UNESCO World Heritage Site, the Western Pennsylvania
+          Conservancy is preparing for a major preservation initiative. The
+          first phase of this multi-year effort will enable us to undertake the
+          preservation of Fallingwater's major building systems, which total $3
+          million. We expect work to begin in 2022.
+        </p>
+      </article>
+      <article id="history">
+        <h2>History</h2>
+        <p>
+          1935 Edgar jr. leaves the Taliesin Fellowship and returns to
+          Pittsburgh. Edgar jr. becomes Merchandise Manager for Home Furnishings
+          at Kaufmann's Department Store in Pittsburgh. He continues in this
+          capacity until 1940. Edgar Kaufmann commissions Frank Lloyd Wright to
+          design a weekend house for his family near Bear Run. Exhibition on
+          11th floor of Kaufmann's Department Store, "New Homes for Old,"
+          sponsored by the Federal Housing Administration featured model for
+          Broadacre City. Department of Architecture is changed to Department of
+          Architecture and Industrial Art, Philip L. Goodwin named chairman
+          (1935-1940).
+          <br /><br />
+          1936 First working drawings of Fallingwater completed (January).
+          Construction of Fallingwater begins (April); foundations completed
+          (July); living room cantilever ready to pour (August).
+          <br /><br />1937 Construction begins on Wright's design for Edgar
+          Kaufmann's corner office on the tenth floor of Kaufmann's Department
+          Store. A one-room interior executed primarily of cypress wood, the
+          office included louvered windows and built-in storage cabinets
+          designed on a two-foot-square module. The focal point was an abstract
+          mural formed of six layers of cypress in a geometric design, based on
+          60- and 120-degree shapes. Taliesin apprentice Manuel Sandoval
+          constructed the mural and installed the office. John McAndrew, Curator
+          of Architecture and Industrial Art at MoMA, writes asking to see
+          Fallingwater. Architectural Forum offers to publish Wright's new work;
+          Bill Hedrich photographs Fallingwater (November). Fallingwater's
+          construction is completed. The Kaufmanns move in (December).
+          <br /><br />1938 "A New House by Frank Lloyd Wright" exhibition is
+          installed in the Time-Life Building (14 East 49th Street in New York),
+          the temporary location of the Museum of Modern Art (January 25 to
+          March 6). Curated by John McAndrew, Curator of Architecture and
+          Industrial Art. Exhibition traveled for two years as part of the
+          Museum's Department of Circulating Exhibitions. Edgar jr. begins work
+          at MoMA part-time (until 1940). Fallingwater featured in Architectural
+          Forum (January), Time (January 17) and Life (January 17), as well as
+          hundreds of newspapers and periodicals worldwide. <br /><br />1939
+          Fallingwater guest house is completed. Albert Einstein returns to
+          western Pennsylvania for a conference with Jewish leaders on how to
+          help protect Jews still trapped in Germany. Given the somber nature of
+          the visit, there were no press conferences or public lectures on that
+          trip. Already in the Pittsburgh area, the Kaufmann family invited him
+          to Fallingwater. <br /><br />1940 "Frank Lloyd Wright: American
+          Architect" exhibition opens at MoMA. Edgar jr. ends work at
+          Kaufmann's; begins working full-time at MoMA (until 1955, less
+          1942-1945 for war service). Kaufmanns sell La Torelle and take an
+          apartment in the William Penn Hotel in Pittsburgh.
+        </p>
+      </article>
+    </main>
+    <footer id="footer">
+      <h3>
+        <a href="https://fallingwater.org/" target="_blank" rel="noopener"
+          >More Info Here</a
+        >
+      </h3>
+    </footer>
   </body>
 </html>
